<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_workout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.workoutapp.WorkoutActivity"
    android:background="@drawable/background">
    <TextView
        android:id="@+id/workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="#000000"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/getWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/workout"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#000000"
            android:textSize="25sp"
            android:text="@string/enterWeight"/>
        <EditText
            android:id="@+id/edit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/weight"
            android:textSize="25sp"
            android:inputType="number"/>
        <TextView
            android:id="@+id/star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:textSize="40sp"
            android:visibility="invisible"
            android:text="@string/star"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/getIncrease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/getWeight"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#000000"
            android:textSize="25sp"
            android:text="@string/enterWeightIncrease"/>
        <EditText
            android:id="@+id/edit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/weight"
            android:textSize="25sp"
            android:inputType="number"/>
        <TextView
            android:id="@+id/star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:textSize="40sp"
            android:visibility="invisible"
            android:text="@string/star"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/getMinReps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/getIncrease"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#000000"
            android:textSize="25sp"
            android:text="@string/enterMinReps"/>
        <EditText
            android:id="@+id/edit3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/reps2"
            android:textSize="25sp"
            android:inputType="number"/>
        <TextView
            android:id="@+id/star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:textSize="40sp"
            android:visibility="invisible"
            android:text="@string/star"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/getMaxReps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/getMinReps"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#000000"
            android:textSize="25sp"
            android:text="@string/enterMaxReps"/>
        <EditText
            android:id="@+id/edit4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/reps2"
            android:textSize="25sp"
            android:inputType="number"/>
        <TextView
            android:id="@+id/star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:visibility="invisible"
            android:textSize="40sp"
            android:text="@string/star"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/getNumSets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/getMaxReps"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#000000"
            android:textSize="25sp"
            android:text="@string/enterNumSets"/>
        <EditText
            android:id="@+id/edit5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/sets"
            android:textSize="25sp"
            android:inputType="number"/>
        <TextView
            android:id="@+id/star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:textSize="40sp"
            android:visibility="invisible"
            android:text="@string/star"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/getNumSets"
        android:text="@string/buttonDone"
        android:onClick="onClick"/>
</RelativeLayout>
