<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_workout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.workoutapp.WorkoutActivity"
    android:background="@drawable/background">
    <TextView
        android:id="@+id/workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="#000000"
        android:gravity="center"/>
    <TextView
        android:id="@+id/warmup"
        android:layout_below="@id/workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#ff0000"
        android:gravity="center"
        android:text="@string/warmup"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/weight"
        android:layout_below="@id/warmup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#707070"
        android:gravity="center"
        android:text="45lbs" />

    <LinearLayout
        android:id="@+id/set1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="6">
        <EditText
            android:id="@+id/edit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/repPrompt"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="/10"/>
        <Button
            android:id="@+id/buttonset1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/buttonDone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/set2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set1"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="6"
        android:visibility="invisible">
        <EditText
            android:id="@+id/edit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/repPrompt"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="/10"/>
        <Button
            android:id="@+id/buttonset2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/buttonDone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/set3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set2"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="6"
        android:visibility="invisible">
        <EditText
            android:id="@+id/edit3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/repPrompt"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="/10"/>
        <Button
            android:id="@+id/buttonset3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/buttonDone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/set4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set3"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="6"
        android:visibility="invisible">
        <EditText
            android:id="@+id/edit4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/repPrompt"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="/10"/>
        <Button
            android:id="@+id/buttonset4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/buttonDone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/set5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set4"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="6"
        android:visibility="invisible">
        <EditText
            android:id="@+id/edit5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/repPrompt"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="/10"/>
        <Button
            android:id="@+id/buttonset5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/buttonDone"/>
    </LinearLayout>
</RelativeLayout>
